--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1"
+    "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
