--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.0",
