--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,12 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.6",
     "@types/ws": "^8.5.10",
+    "prisma": "^5.19.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "axios": "^1.6.7",
