--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-paginate": "^8.2.0"
+    "react-paginate": "^8.2.0",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
