--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.10.6",
     "@types/ws": "^8.5.10",
     "prisma": "^5.19.1",
@@ -37,6 +38,7 @@
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
     "ts-node": "^10.9.2",
