--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^5.19.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
