--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.9",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -20,7 +21,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
