--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^5.19.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/qrcode": "^1.5.5",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
@@ -41,6 +42,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
+    "qrcode": "^1.5.4",
+    "qrcode-pix": "5.0.0",
     "reflect-metadata": "^0.2.1",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.19",
