--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
+    "leaflet": "^1.9.4",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
@@ -20,12 +21,14 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-paginate": "^8.2.0",
     "react-select": "^5.8.0",
     "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
