--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.10",
+    "apexcharts": "^4.3.0",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -17,6 +18,7 @@
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "react": "^18",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
