att: alterações para prod

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,6 +9,14 @@ RUN npm run build
 # Etapa de produção
 FROM node:18-slim
 WORKDIR /app
+
+# Instalar OpenSSL
+RUN apt-get update -y && apt-get install -y openssl
+
 COPY --from=builder /app .
+
+# Gera os arquivos Prisma Client
+RUN npx prisma generate
+
 EXPOSE 5000
 CMD ["npm", "run", "start"]
