--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   backend:
     build: ./backend
+    restart: always
     ports:
       - "5000:5000"
     networks:
@@ -9,6 +10,7 @@ services:
 
   frontend:
     build: ./frontend
+    restart: always
     ports:
       - "3000:3000"
     networks:
